force-app/main/default/objects/Meeting_Workflow__c/Meeting_Workflow__c.object-meta.xml
<CustomObject>
    <label>Meeting Workflow</label>
    <nameField>
        <label>Meeting Workflow Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meeting Workflows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>