force-app/main/default/objects/Meeting_Workflow__c/fields/Create_Manager_As_Approver__c.field-meta.xml
<CustomField>
    <fullName>Create_Manager_As_Approver__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Meeting workflow config field</description>
    <label>Create Manager As Approver</label>
    <type>Checkbox</type>
</CustomField>