force-app/main/default/objects/Meeting_Workflow__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <description>Meeting workflow config field</description>
    <label>Approval Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GPM</fullName>
                <default>true</default>
                <label>GPM</label>
            </value>
            <value>
                <fullName>NLM</fullName>
            </value>
            <value>
                <fullName>Light</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>