force-app/main/default/objects/Meeting_Workflow__c/fields/Is_Archived__c.field-meta.xml
<CustomField>
    <fullName>Is_Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Meeting workflow config field</description>
    <label>Archived</label>
    <type>Checkbox</type>
</CustomField>