force-app/main/default/objects/Meeting_Workflow__c/fields/Is_Draft__c.field-meta.xml
<CustomField>
    <fullName>Is_Draft__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Meeting workflow config field</description>
    <label>Draft</label>
    <type>Checkbox</type>
</CustomField>