force-app/main/default/objects/Meeting_Workflow__c/fields/Is_Published__c.field-meta.xml
<CustomField>
    <fullName>Is_Published__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Meeting workflow config field</description>
    <label>Published</label>
    <type>Checkbox</type>
</CustomField>