force-app/main/default/objects/Meeting_Workflow__c/fields/Meeting_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Record_Type__c</fullName>
    <label>Meeting Record Type</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>