force-app/main/default/objects/Meeting_Workflow__c/fields/Published_By__c.field-meta.xml
<CustomField>
    <fullName>Published_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Meeting workflow config field</description>
    <label>Published By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Published Workflows</relationshipLabel>
    <relationshipName>Published_Workflows</relationshipName>
    <type>Lookup</type>
</CustomField>