force-app/main/default/objects/Meeting_Workflow__c/fields/Published_Date__c.field-meta.xml
<CustomField>
    <fullName>Published_Date__c</fullName>
    <description>Meeting workflow config field</description>
    <label>Published Date</label>
    <type>DateTime</type>
</CustomField>