force-app/main/default/objects/Meeting_Workflow__c/fields/Statuses_To_Calculate_Actuals__c.field-meta.xml
<CustomField>
    <fullName>Statuses_To_Calculate_Actuals__c</fullName>
    <description>Meeting workflow config field</description>
    <label>Statuses To Calculate Actuals</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>