force-app/main/default/objects/Meeting_Workflow__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Meeting_Record_Type__c</columns>
    <columns>Family__c</columns>
    <columns>Version__c</columns>
    <columns>Is_Published__c</columns>
    <columns>Is_Draft__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Workflows</label>
</ListView>